Added new users and added bootstrap framework to html

--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -1,18 +1,30 @@
-<!-- templates/tasks.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Tasks</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Tasks</h1>
-    <ul>
-    {% for task in tasks %}
-        <li>
-            <h2>{{ task.title }}</h2>
-            <p>{{ task.description }}</p>
-        </li>
-    {% endfor %}
-    </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 mx-auto">
+                <h1 class="my-4 text-center">Tasks Homepage</h1>
+                {% for task in tasks %}
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h2 class="card-title">{{ task.title }}</h2>
+                            <p class="card-text">{{ task.description }}</p>
+                            <p class="card-text"><small class="text-muted">Created on: {{ task.date_created }}</small></p>
+                            <p class="card-text"><small class="text-muted">Due date: {{ task.due_date }}</small></p>
+                            <p class="card-text"><small class="text-muted">Created by: {{ task.user.username }}</small></p>
+                            <p class="card-text"><small class="text-muted">Completed: {{ task.completed }}</small></p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
